Gerando a documentação do endpoint
